added profile picture, and updated HTML/CSS files

--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reece Adams</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>My Portfolio</h1>
-    <p>This is a description of me...</p>
+    <h1>Reece Adams</h1>
+    <div class="profile_picture">
+        <img src="profile_picture.jpg" alt="Profile Picture" height="300">
+    </div>
+    <h4>Let me introduce myself</h4>
+
 </body>
 </html>
