added updated files and resume

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,39 @@
     <title>Reece Adams</title>
     <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
     <h1>Reece Adams</h1>
-    <div class="profile_picture">
+    <main>
         <img src="profile_picture.jpg" alt="Profile Picture" height="300">
+        <div class="sub_grid">
+            <h4>Biography</h4>
+            <div class="biography">
+                <p>I am a huge proponent of learning whether traditionally or through non-traditional experiences. I started my
+                    education at my local community college and found myself heading to become an elemtary
+                    school teacher. Then I found coding a world of design, creation, and learning all at my fingertips and I
+                    fell for it. I found myself with the curiosity bug yet again. I deep dived head-first switching my major and
+                    taking a Fullstack bootcamp with and never looked back.</p>
+            </div>
+            <h4>Skills</h4>
+            <div class="skills">
+                <p>Python, HTML, CSS, Leadership, Time Management, Advertising, Sales, and Social media management.                </p>
+            </div>
+        </div>
+    </main>
+    <div class="nav">
+    <h2>Resources</h2>
+    <section>
+        <div class="resume-wrapper wrppr">
+            <a class="btn-resume" href="htttp://google.com/">RESUME</a>
+        </div>
+        <div class="pdx-wrapper wrppr">
+            <a class="btn-pdx" href="https://pdxcodeguild.com/">PDXCODEGUILD</a>
+        </div>
+        <div class="dccc-wrapper wrppr">
+            <a class="btn-dccc" href="https://www.dccc.edu/">DCCC</a>
+        </div>
+    </section>
     </div>
-    <h4>Let me introduce myself</h4>
-
 </body>
 </html>
