--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a class="btn-pdx" href="https://pdxcodeguild.com/">PDXCODEGUILD</a>
         </div>
         <div class="dccc-wrapper wrppr">
-            <a class="btn-dccc" href="https://www.dccc.edu/">DCCC</a>
+            <a class="btn-dccc" href="resume.html">DCCC</a>
         </div>
     </section>
     </div>
