fixed links in html

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     <h2>Resources</h2>
     <section>
         <div class="resume-wrapper wrppr">
-            <a class="btn-resume" href="htttp://google.com/">RESUME</a>
+            <a class="btn-resume" href="resume.html">RESUME</a>
         </div>
         <div class="pdx-wrapper wrppr">
             <a class="btn-pdx" href="https://pdxcodeguild.com/">PDXCODEGUILD</a>
         </div>
         <div class="dccc-wrapper wrppr">
-            <a class="btn-dccc" href="resume.html">DCCC</a>
+            <a class="btn-dccc" href="https://www.dccc.edu/">DCCC</a>
         </div>
     </section>
     </div>
